--- a/src/Hangfire.Raven/packages.config
+++ b/src/Hangfire.Raven/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dewey.Net" version="3.3.0.0" targetFramework="net45" />
-  <package id="Hangfire" version="1.5.3" targetFramework="net45" />
-  <package id="Hangfire.Core" version="1.5.3" targetFramework="net45" />
-  <package id="Hangfire.SqlServer" version="1.5.3" targetFramework="net45" />
+  <package id="Dewey" version="5.0.0" targetFramework="net45" />
+  <package id="Hangfire" version="1.6.2" targetFramework="net45" />
+  <package id="Hangfire.Core" version="1.6.2" targetFramework="net45" />
+  <package id="Hangfire.SqlServer" version="1.6.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="RavenDB.Client" version="3.0.30037" targetFramework="net45" />
-  <package id="RavenDB.Database" version="3.0.30037" targetFramework="net45" />
-  <package id="RavenDB.Embedded" version="3.0.30037" targetFramework="net45" />
+  <package id="RavenDB.Client" version="3.0.30153" targetFramework="net45" />
+  <package id="RavenDB.Database" version="3.0.30153" targetFramework="net45" />
+  <package id="RavenDB.Embedded" version="3.0.30153" targetFramework="net45" />
 </packages>
