Added: Correct number of Queues, not just the static "2" Added: Hangfire/JobQueues index Changed: JobQueue to handle multiple queues correct. Each worker can have only one queue to monitor (by design) Changed: all queries to be handled by one of the two indexes Changed: Hangfire.Core to include 1.6.4 Changed: RavenDB.Client to include 3.0.30155 Bugfix: Add StartedAt for a RavenServer Bugfix: Remove RavenServers/ prefix from server names for gui to not show error "Server is probably offline" Removed: Double execution of Indexes

--- a/src/Hangfire.Raven/Hangfire.Raven.csproj
+++ b/src/Hangfire.Raven/Hangfire.Raven.csproj
@@ -40,8 +40,8 @@
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Hangfire.Core, Version=1.6.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\Hangfire.Core.1.6.3\lib\net45\Hangfire.Core.dll</HintPath>
+    <Reference Include="Hangfire.Core, Version=1.6.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Hangfire.Core.1.6.4\lib\net45\Hangfire.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -53,11 +53,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\RavenDB.Client.3.0.30115\lib\net45\Raven.Abstractions.dll</HintPath>
+      <HintPath>..\..\..\..\packages\RavenDB.Client.3.0.30155\lib\net45\Raven.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Raven.Client.Lightweight, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\RavenDB.Client.3.0.30115\lib\net45\Raven.Client.Lightweight.dll</HintPath>
+      <HintPath>..\..\..\..\packages\RavenDB.Client.3.0.30155\lib\net45\Raven.Client.Lightweight.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -87,6 +87,7 @@
     <Compile Include="Entities\RavenJob.cs" />
     <Compile Include="Entities\RavenServer.cs" />
     <Compile Include="Extensions\DatabaseExtensions.cs" />
+    <Compile Include="Indexes\Hangfire_JobQueues.cs" />
     <Compile Include="Indexes\Hangfire_RavenJobs.cs" />
     <Compile Include="Indexes\Raven_DocumentsByEntityName.cs" />
     <Compile Include="JobQueues\IPersistentJobQueue.cs" />
