--- a/src/Hangfire.Raven/project.json
+++ b/src/Hangfire.Raven/project.json
@@ -1,6 +1,6 @@
 {
     "title": "Hangfire.Raven",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "description": "RavenDB job storage for Hangfire",
     "copyright": "Copyright @ 2016 Cady, LLC",
     "authors": [
@@ -43,58 +43,14 @@
     },
     "dependencies": {
         "Hangfire.Core": "1.6.4",
-        "Newtonsoft.Json": "9.0.1"
+        "Newtonsoft.Json": "9.0.1",
+        "RavenDB.Client": "3.5.0-rc-35169"
     },
     "frameworks": {
         "net45": {
             "frameworkAssemblies": {
                 "System.Data": "4.0.0.0",
                 "System.Reflection": "4.0.0.0"
-            },
-            "dependencies": {
-                "RavenDB.Client": "3.5.0-rc-35169"
-            }
-        },
-        "net451": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
-            }
-        },
-        "net452": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
-            }
-        },
-        "net46": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
-            }
-        },
-        "net461": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
-            }
-        },
-        "dnx451": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
-            }
-        },
-        "dnx46": {
-            "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
             }
         },
         "netcoreapp1.0": {
@@ -104,14 +60,13 @@
                 "portable-net45+win8"
             ],
             "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
+                "Microsoft.Extensions.DependencyModel": "1.1.0",
                 "Microsoft.NETCore.App": {
                     "version": "1.0.0",
                     "type": "platform"
                 },
                 "NETStandard.Library": "1.6.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
+                "System.Data.Common": "4.3.0"
             }
         },
         "netstandard1.6": {
@@ -121,10 +76,9 @@
                 "portable-net45+win8"
             ],
             "dependencies": {
-                "Microsoft.Extensions.DependencyModel": "1.0.0",
+                "Microsoft.Extensions.DependencyModel": "1.1.0",
                 "NETStandard.Library": "1.6.0",
-                "RavenDB.Client": "3.5.0-rc-35169",
-                "System.Data.Common": "4.1.0"
+                "System.Data.Common": "4.3.0"
             }
         }
     }
