Added Hangfire.Raven.Tests project - Refactored Repository and RavenStorage to allow injection of a TestRepository (using an in-memory database for unit tests) - Made several fixes to comply with unit tests (notably RavenDistributedLock and RavenJobQueue) - Merged fixes from xinix00 pull request #11 (https://github.com/RefreshingIO/hangfire-ravendb/pull/11)

--- a/examples/Hangfire.Raven.Examples.AspNetCore/project.json
+++ b/examples/Hangfire.Raven.Examples.AspNetCore/project.json
@@ -43,8 +43,8 @@
         "summary": "RavenDB job storage for Hangfire - AspNetCore Example"
     },
     "dependencies": {
-        "Hangfire.AspNetCore": "1.6.7",
-        "Hangfire.Raven": "2.1.1",
+        "Hangfire.AspNetCore": "1.6.8",
+        "Hangfire.Raven": { "target": "project" },
         "Microsoft.NETCore.App": {
             "version": "1.0.1",
             "type": "platform"
