--- a/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
+++ b/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
@@ -5,10 +5,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
-    <Version>3.0.0</Version>
-    <AssemblyVersion>3.0.0.0</AssemblyVersion>
-    <FileVersion>3.0.0.0</FileVersion>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>3.1.0</Version>
+    <AssemblyVersion>3.1.0.0</AssemblyVersion>
+    <FileVersion>3.1.0.0</FileVersion>
     <Description>RavenDB job storage for Hangfire - Console Example</Description>
     <Authors>Refreshing Collective &lt;contact@refreshing.io&gt;</Authors>
     <Company>Refreshing Collective LLC</Company>
@@ -38,8 +38,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.Core" Version="1.6.12" />
-    <PackageReference Include="RavenDB.Client" Version="3.5.4-patch-35196" />
+    <PackageReference Include="Hangfire.Core" Version="1.6.16" />
+    <PackageReference Include="RavenDB.Client" Version="3.5.5-patch-35220" />
   </ItemGroup>
 
 </Project>
