--- a/src/Hangfire.Raven/Hangfire.Raven.csproj
+++ b/src/Hangfire.Raven/Hangfire.Raven.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
-    <Version>3.0.0</Version>
-    <AssemblyVersion>3.0.0.0</AssemblyVersion>
-    <FileVersion>3.0.0.0</FileVersion>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Version>3.1.0</Version>
+    <AssemblyVersion>3.1.0.0</AssemblyVersion>
+    <FileVersion>3.1.0.0</FileVersion>
     <Description>RavenDB job storage for Hangfire</Description>
     <Authors>Refreshing Collective &lt;contact@refreshing.io&gt;</Authors>
     <Company>Refreshing Collective LLC</Company>
@@ -24,8 +24,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.Core" Version="1.6.12" />
-    <PackageReference Include="RavenDB.Client" Version="3.5.4-patch-35196" />
+    <PackageReference Include="Hangfire.Core" Version="1.6.16" />
+    <PackageReference Include="RavenDB.Client" Version="3.5.5-patch-35220" />
   </ItemGroup>
 
 </Project>
