--- a/samples/Hangfire.Raven.Samples.AspNetCore/Hangfire.Raven.Samples.AspNetCore.csproj
+++ b/samples/Hangfire.Raven.Samples.AspNetCore/Hangfire.Raven.Samples.AspNetCore.csproj
@@ -1,29 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>3.1.0</Version>
-    <AssemblyVersion>3.1.0.0</AssemblyVersion>
-    <FileVersion>3.1.0.0</FileVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>3.1.1</Version>
+    <AssemblyVersion>3.1.1.0</AssemblyVersion>
+    <FileVersion>3.1.1.0</FileVersion>
     <Description>RavenDB job storage for Hangfire - AspNetCore Example</Description>
-    <Authors>Refreshing Collective &lt;contact@refreshing.io&gt;</Authors>
-    <Company>Refreshing Collective LLC</Company>
-    <Copyright>Copyright @ Refreshing Collective LLC</Copyright>
+    <Authors>CadyIO &lt;contact@cady.io&gt;</Authors>
+    <Company>Cady IO</Company>
+    <Copyright>Copyright @ Cady LLC</Copyright>
     <PackageLicenseUrl>http://www.gnu.org/licenses/lgpl-3.0.html</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/RefreshingIO/hangfire-ravendb</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/CadyIO/hangfire-ravendb</PackageProjectUrl>
     <PackageIconUrl>https://avatars2.githubusercontent.com/u/7880472?v=3&amp;s=200</PackageIconUrl>
     <PackageId>Hangfire.Raven.Samples.AspNetCore</PackageId>
     <PackageTags>Hangfire;AspNet;MVC;OWIN;RavenDB;Long-Running;Background;Fire-And-Forget;Delayed;Recurring;Tasks;Jobs;Scheduler;Threading;Queues</PackageTags>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/RefreshingIO/hangfire-ravendb</RepositoryUrl>
+    <RepositoryUrl>https://github.com/CadyIO/hangfire-ravendb</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.6.16" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.6.17" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
