attempting fix for Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ dist: trusty
 sudo: required
 script:
  - dotnet restore
- - dotnet build
+ - dotnet build -f netstandard1.3
+ - dotnet build -f netstandard1.4
+ - dotnet build -f netstandard1.5
+ - dotnet build -f netstandard1.6
+ - dotnet build -f netstandard2.0
