--- a/src/Hangfire.Raven/Hangfire.Raven.csproj
+++ b/src/Hangfire.Raven/Hangfire.Raven.csproj
@@ -29,4 +29,24 @@
     <PackageReference Include="RavenDB.Client" Version="3.5.4" />
   </ItemGroup>
 
+    <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+        <PackageReference Include="RavenDB.Database">
+            <Version>3.5.4</Version>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+        <PackageReference Include="RavenDB.Database">
+            <Version>3.5.4</Version>
+        </PackageReference>
+    </ItemGroup>
+
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net46'">
+        <DefineConstants>NETFULL</DefineConstants>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net45'">
+        <DefineConstants>NETFULL</DefineConstants>
+    </PropertyGroup>
+
 </Project>
