--- a/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
+++ b/samples/Hangfire.Raven.Samples.Console/Hangfire.Raven.Samples.Console.csproj
@@ -40,8 +40,8 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="1.6.17" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="RavenDB.Client" Version="4.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="RavenDB.Client" Version="4.0.3-patch-40031" />
   </ItemGroup>
 
 </Project>
