--- a/src/Hangfire.Raven/Hangfire.Raven.csproj
+++ b/src/Hangfire.Raven/Hangfire.Raven.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard1.6;netstandard1.5;netstandard1.4;netstandard1.3</TargetFrameworks>
-    <Version>4.0.0</Version>
-    <AssemblyVersion>4.0.0.0</AssemblyVersion>
-    <FileVersion>4.0.0.0</FileVersion>
+    <Version>4.0.3.0-beta</Version>
+    <AssemblyVersion>4.0.1.1</AssemblyVersion>
+    <FileVersion>4.0.1.1</FileVersion>
     <Description>RavenDB job storage for Hangfire</Description>
     <Authors>CadyIO &lt;contact@cady.io&gt;</Authors>
     <Company>Cady IO</Company>
@@ -26,8 +26,12 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="1.6.17" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="RavenDB.Client" Version="4.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="RavenDB.Client" Version="4.0.3-patch-40031" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Indexes\" />
   </ItemGroup>
 
 </Project>
